Assignment3/gateway-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: gateway-demo
spec:
  gatewayClassName: envoy

  listeners:

  - name: https

    protocol: HTTPS

    port: 443

    tls:
      mode: Terminate

      certificateRefs:
        - kind: Secret
          name: gateway-tls

    allowedRoutes:
      namespaces:
        from: Same
